--- a/index.html
+++ b/index.html
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/main.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Paradise</title>
+    <title>みんなで楽園で遊ぼう～</title>
 </head>
 <body>
+    <header>
+        <h1>みんなで楽園で遊ぼう～</h1>
+        <p>PDFファイルをダウンロードしよう！ カーソルで名前が出てくるよ！</p>
+        <p>キャラクターも移動、サイズ拡大縮小もできるよ！</p>
+    </header>
     <iframe id="inlineFrameExample"
     title="Inline Frame Example"
     width="710"
     height="1420"
     src=pdf/leyuan.pdf
-    </iframe>
+    >
 </body>
 </html>
