--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1>みんなで楽園で遊ぼう～</h1>
+        <h1>みんなと楽園で遊ぼう～</h1>
         <p>PDFファイルをダウンロードしよう！ カーソルで名前が出てくるよ！</p>
         <p>キャラクターも移動、サイズ拡大縮小もできるよ！</p>
     </header>
