--- a/index.html
+++ b/index.html
@@ -1,23 +1,32 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/main.css">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>みんなと楽園で遊ぼう～</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>みんなと楽園で遊ぼう～</title>
+　<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header>
-        <h1>みんなと楽園で遊ぼう～</h1>
-        <p>PDFファイルをダウンロードしよう！ カーソルで名前が出てくるよ！</p>
-        <p>キャラクターも移動、サイズ拡大縮小もできるよ！</p>
-    </header>
-    <iframe id="inlineFrameExample"
-    title="Inline Frame Example"
-    width="710"
-    height="1420"
-    src=pdf/leyuan.pdf
-    >
+  <header>
+    <h1>みんなと楽園で遊ぼう～</h1>
+
+  </header>
+  <div class="imgDiv">
+    <img src="map.jpg">
+  </div>
+  <br>
+  <br>
+  <p>下のPDF版ファイルをダウンロードしよう！</p>
+　<p>キャラクターの移動、サイズ拡大縮小もできるよ！</p>
+  <p>カーソルで名前が出てくるよ！</p>
+  <br>
+
+ <iframe id="inlineFrameExample"
+　title="Inline Frame Example"
+  width="600"
+  height="1420"
+  src=pdf/leyuan.pdf
+ >
 </body>
 </html>
