--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <body>
   <header>
     <h1>みんなと楽園で遊ぼう～</h1>
-
+    <p>だれかわかるかな？</p>
+    <br>
   </header>
   <div class="imgDiv">
     <img src="map.jpg">
