--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
   <br>
   <br>
   <p>下のPDF版ファイルをダウンロードしよう！</p>
+　<p>キャラクターの移動、サイズ拡大縮小もできるよ！</p>
   <p>カーソルで名前が出てくるよ！</p>
-　<p>キャラクターの移動、サイズ拡大縮小もできて、自分の楽園が作れるよ！</p>
   <br>
 
  <iframe id="inlineFrameExample"
 　title="Inline Frame Example"
-  width="1000"
-  height="1200"
+  width="600"
+  height="1420"
   src=pdf/leyuan.pdf
  >
 </body>
