--- a/index.html
+++ b/index.html
@@ -29,6 +29,6 @@
   height="1200"
   src=pdf/leyuan.pdf
  >
- <a href="./leuan.pdf" download="leyuan.pdf">PDFをダウンロード</a>
+ <a href="./leyuan.pdf" download="leyuan.pdf">PDFをダウンロード</a>
 </body>
 </html>
