--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <br>
   <p>下のPDF版ファイルをダウンロードしよう！</p>
 　<p>キャラクターの移動、サイズ拡大縮小もできるよ！</p>
-  <p>カーソルで名前が出てくるよ！</p>
+  <p>クリックすると名前が出てくるよ！</p>
   <br>
   
  <a href="./leyuan.pdf" download="leyuan.pdf">PDFをダウンロード</a>
