--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
   <br>
   <br>
   <p>下のPDF版ファイルをダウンロードしよう！</p>
-　<p>キャラクターの移動、サイズ拡大縮小もできるよ！</p>
-  <p>クリックすると名前が出てくるよ！</p>
+　<p>キャラクターの移動させて、遊ばせよう～</p>
+  <p>キャラクターサイズも拡大縮小できるよ！</p>
+  <p>クリックすると名前が出てくるよ～</p>
   <br>
-  
  <a href="./leyuan.pdf" download="leyuan.pdf">PDFをダウンロード</a>
 </body>
 </html>
