--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <br>
   <br>
   <p>下のPDF版ファイルをダウンロードしよう！</p>
-　<p>キャラクターの移動させて、遊ばせよう～</p>
+　<p>キャラクターの移動させて遊ばせよう～</p>
   <p>キャラクターサイズも拡大縮小できるよ！</p>
   <p>クリックすると名前が出てくるよ～</p>
   <br>
