--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
   <br>
   <br>
   <p>下のPDF版ファイルをダウンロードしよう！</p>
-　<p>キャラクターの移動させて遊ばせよう～</p>
+　<p>キャラクターを移動させて遊ばせよう～</p>
   <p>キャラクターサイズも拡大縮小できるよ！</p>
-  <p>クリックすると名前が出てくるよ～</p>
+  <p>クリックすると名前も出てくるよ～</p>
   <br>
  <a href="./leyuan.pdf" download="leyuan.pdf">PDFをダウンロード</a>
 </body>
