--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <br>
   <p>下のPDF版ファイルをダウンロードしよう！</p>
 　<p>キャラクターを移動させて遊ばせよう～</p>
-  <p>キャラクターサイズも拡大縮小できるよ！</p>
+  <p>キャラクターサイズも調整できるよ！</p>
   <p>クリックすると名前も出てくるよ～</p>
   <br>
  <a href="./leyuan.pdf" download="leyuan.pdf">PDFをダウンロード</a>
